--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Картка</title>
+    <link rel="stylesheet" href="./styles/main.css">
+  </head>
+  <body>
+    <div class="kart">
+      <div class="picture">
+  <img src="img1.jpg" alt="Картинка">
+      </div>
+      <div class="duble">
+        <div class="butt">
+          1.23 <img class="picture2" src="star.png" alt="">
+        </div>
+      <div class="prise">
+  10850
+        </div>
+          </div>
+      <div class="text">
+  Ноутбук HP Pavilion Gaming 15-ec2013ua (4A7M9EA) Shadow Black
+      </div>
+      <div class="foo">
+        ДОДАТИ В КОРЗИНУ
+      </div>
+    </div>
+  </body>
 </html>
