--- a/components/card/style.css
+++ b/components/card/style.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 body {
   background-color: rgb(244,244,244 );
   margin: 0;
   padding: 0;
-  font-family: Montserrat,sans-serif;
+  font-family: 'Montserrat', sans-serif;
 
 }
 .os-product-card {
