--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
+  <main>
+    <div class="wrapper">
+      <!-- Card component -->
+      <div class="card">
+        <img src="./img/Rectangle.png" alt="" class="card__img">
+        <div class="card_rang__item">
+          <div class="card__rang">1.23
+            <img class="card__icon" src="./img/Star.png" alt="">
+          </div>
+          <div class="card__total">15999</div>
+        </div>
+        <h4 class="card__title">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </h4>
+        <h5 class="card__sub_title">laptops</h5>
+        <a href="" class="card__button">Add To Cart</a>
+      </div>
+    </div>
+  </main>
 </body>
+
 </html>
