--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- Card component -->
+    <div class="os-img">
+      <img src="./images/Rectangle.png" alt="foto">
+    </div>
+
+    <div class="os-price">
+      <div class="os-price-star">
+        <p class="size">1.23</p>
+        <img src="./images/Star.png" alt="icon">
+
+      </div>
+
+      <p class="os-price-price size">
+        15999
+      </p>
+    </div>
+
+    <div class="os-text">
+      <p class="size">Ноутбук Acer Aspire 3 A315-57G-336G <br> (NX.HZREU.01S) Charcoal Black</p>
+      <p class="os-text-two size">laptops</p>
+    </div>
+
+    <div class="os-footer size">
+      <p>add to cart</p>
+    </div>
   </div>
 </main>
 </body>
