create-card-online-store

--- a/components/card/index.html
+++ b/components/card/index.html
@@ -5,18 +5,54 @@
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
+
+    <div class="wrapper">
+
+      <div class="card_container">
+
+        <div class="card_item-photo">
+          <img src="./img/A315-57G-336G.png" alt="Acer Aspire 3 A315-57G-336G">
+        </div>
+
+        <div class="card_descriptin">
+
+            <div class="card-item_row">
+
+                <div class="card_rate">
+
+                    <div class="rate_number">
+                      <span>1.23</span>
+                    </div>
+
+                    <div>
+                      <img src="./img/Star 1.png" alt="rate-star">
+                    </div>
+                </div>
+
+                <div class="card_price">
+                  15999
+                </div>
+            </div>
+
+            <div class="card_title">
+              Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+            </div>
+
+            <div class="card_category">
+              laptops
+            </div>
+        </div>
+
+        <div class="card_add-buttom">
+            <div class="add-buttom_title">
+              Add To Cart
+            </div>
+      </div>
+    </div>
+
 </main>
 </body>
 </html>
