--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <style>
     .wrapper {
       width: 400px;
@@ -16,6 +16,16 @@
 <main>
   <div class="wrapper">
     <!-- Card component -->
+    <div class="card">
+      <img class="card-img" src="laptop.png" alt="Leptop">
+      <div class="card-header">
+          <div class="card-header-rating">1.23</div>
+          <div class="card-header-price">15999</div>
+      </div>
+      <p>Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+      <a href="#" class="card-category">laptops</a>
+      <a href="#" class="card-buy">Add To Cart</a>
+  </div>
   </div>
 </main>
 </body>
