--- a/components/card/index.html
+++ b/components/card/index.html
@@ -10,12 +10,34 @@
       width: 400px;
       margin: 100px auto;
     }
+
+    html{
+  font-size: 14px;
+  font-family: Montserrat,sans-serif;
+  margin: 0;
+}
   </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- Card component -->
+    <div class="product-card">
+      <div class="product-img"></div>
+      <div class="product-content">
+        <div class="product-price-block">
+          <div class="product-rating">
+            <span>1.23</span>
+            <i class="star">
+              &#9734</i></div>
+        <div class="product-price">15999</div>
+          </div>
+        <h5 class="product-title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+        <p class="product-description">laptops</p>
+      </div>
+    <footer class="product-footer">
+      <button class="btn-primary" data-element="addToCartBtn" ><!--<i class="bi bi-box-seam product-shoping-bag"></i>--> Add To Cart </button>
+    </footer>
+    </div>
   </div>
 </main>
 </body>
