--- a/components/card/index.html
+++ b/components/card/index.html
@@ -2,21 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
+  <title>Карта продукту</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
+    <div class="product-card">
+    <div class="img" style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg);"></div>
+
+    <div class="product-content">
+      <div class="wrapper">
+        <div class="rating">
+          <span>2.89</span>
+          <i class="star"></i>
+        </div>
+
+        <div class="price">15999</div>
+      </div>
+
+      <h5 class="product-title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+      <p class="product-description">laptops</p>
+    </div>
+
+    <footer class="footer">
+      <button class="btn-primary" >
+        Add To Card
+      </button>
+    </footer>
+
 </body>
 </html>
