online-store-task

--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>HTML/CSS Card component</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <div class="wrapper">
+        <div class="item">
+          <img src="img/laptop.jpg" alt="item" />
+        </div>
+        <div class="info-padding">
+          <div class="item-stat">
+            <div class="item-rate"><p>1.23 <span class="star">&#9734</span></p></div>
+            <div class="item-price"><p>15999</p></div>
+          </div>
+          <div class="item-info">
+            <p>
+              Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+            </p>
+          </div>
+          <div class="info">
+            <p>laptops</p>
+          </div>
+        </div>
+          <button><div class="add-button"><p>Add To Cart</p></div></button>
+      </div>
+    </main>
+  </body>
 </html>
