--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <Link rel="stylesheet" href="css/style.css"></Link>
+    <title>Leptop </title>
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
+  <div class="cart">
+      <div class="block">
+
+         <img src="img/photo 1.jpg" alt="#" >
+
+         <div class="item">
+          <button class="btn1"><p class="star">1.23</p>  </button>
+          <div>15999 </div>
+          </div>
+
+          <p> Ноутбук Acer Aspire <span> 3 A315-57G-336G (NX.HZREU.01S)</span> Charcoal Black </p>
+
+          <h5>laptops </h5>
+          <button class="btn"> Add To Cart</button>
+      </div>
+
   </div>
-</main>
 </body>
 </html>
