--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
-
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <style>
     .wrapper {
       width: 400px;
@@ -27,8 +27,10 @@
 
     }
 
-    .goryzontalka{
+    /*блок рейтинг-ціна*/
+    .goryzontalka{  /
       display: flex;
+     /* flex-direction: row; */
       justify-content: space-between;
       margin: 24px;
       height: 5%;
@@ -40,20 +42,32 @@
 
     .rating{
       width: 10%;
-
+      height: 100%;
       min-width: 70px;
-
       border-radius: 3px;
       background: #7E72F2;
       color: white;
-      text-align: center;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+    }
+
+    .rating-star{
+      width: 10px;
+      height: 10px;
+      bacolor: white;
+      box-sizing: border-box;
     }
 
     .price{
 
       width: 10%;
+      height: 100%;
       min-width: 70px;
-      font-size: 24px;
+      font-size: 1.5em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .description{
@@ -84,8 +98,10 @@
       border-bottom-left-radius: 8px;
       border-bottom-right-radius: 8px;
       color: white;
-      text-align: center;
-      vertical-align: middle;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
     }
 
   </style>
@@ -98,6 +114,8 @@
       <div class="goryzontalka">
         <div class="rating">
           4.5
+          <svg class="rating-star" src="Star1.svg" alt="stars">
+          </svg>
         </div>
         <div class="price">
           1111
