--- a/components/card/card_shop.html
+++ b/components/card/card_shop.html
@@ -22,12 +22,14 @@
     </div>
     <div class="card-shop-name">
       <a href="#">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</a>
-      <a href="#">laptops</a>
+      <p>laptops</p>
     </div>
-    <button class="card-shop-button">
-ADD TO CART
-    </button>
+
+
   </div>
+  <button class="card-shop-button">
+    ADD TO CART
+  </button>
 </section>
 </body>
 </html>
