--- a/components/card/index.html
+++ b/components/card/index.html
@@ -3,20 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
+  <link href='//fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
-<body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
+<body class="text">
+  <main>
+    <div class="wrapper">
+      <div class="card">
+        <img class="item" src="Rectangleitem.png" alt="laptop">
+
+        <div class="price">
+          <button class="card_button_1 button_color"> <span>1.23</span> <img class="star" src="Star.png" alt="star"></button>
+
+          <p class="value">15999</p>
+        </div>
+
+        <p class="name">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </p>
+
+        <p class="catagory">laptops</p>
+
+        <button class="main-button">add to card</button>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
