product card by Dmytro Hrytsai

--- a/components/card/index.html
+++ b/components/card/index.html
@@ -15,6 +15,29 @@
 <body>
 <main>
   <div class="wrapper">
+    <div class="card-rectangle">
+      <div>
+        <img class="product-img" src="./img/Rectangle.png" alt="product image">
+      </div>
+      <div class="rating-price-block">
+        <div class="rating-block">
+          <p class="white-color rating-font-size font-family rating-position">1.23</p>
+          <img class="star-img" src="./img/Star 1 (Stroke).png" alt="star icon">
+        </div>
+        <div class="price-block ">
+          <p class="black-color price-font-size font-family">15999</p>
+        </div>
+      </div>
+      <div class="title-block">
+        <p class="font-family black-color">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+      </div>
+      <div class="product-category">
+        <p class="font-family black-color prod-cat-font-size">laptop</p>
+      </div>
+      <div class="add-button">
+        <p class="font-family white-color button-text">Add to Cart</p>
+      </div>
+    </div>
     <!-- Card component -->
   </div>
 </main>
