--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Online Store</title>
+  <link rel="stylesheet" href="style/maincard.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
+  <div class="container">
+    <div class="block">
+      <div>
+        <img class="image" src="img/Note.png" alt="Note">
+      </div>
+      <div class="price">
+        <p class="raiting">
+          1.23<img class="star" src="img/Star.png">
+        </p>
+        <p class="cost">
+          15999
+        </p>
+      </div>
+        <p class="text">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </p>
+        <p>laptops</p>
+      <div>
+        <button class="buttons">
+          <a href="#">ADD TO CART</a>
+        </button>
+      </div>  
+    </div>
   </div>
-</main>
 </body>
 </html>
