--- a/components/card/index.html
+++ b/components/card/index.html
@@ -5,23 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <Link rel="stylesheet" href="css/style.css"></Link>
-    <title>Leptop </title>
+    <title>online-store (Leptop) </title>
 </head>
 <body>
   <div class="cart">
       <div class="block">
-
          <img src="img/photo 1.jpg" alt="#" >
-
-         <div class="item">
-          <button class="btn1"><p class="star">1.23</p>  </button>
+          <div class="item">
+              <div class="btn1-block">
+               <button class="btn1">1.23 <img class="star" src="/components/card/img/Star 1.svg" alt="">  </button>
+             </div>
           <div>15999 </div>
-          </div>
-
-          <p> Ноутбук Acer Aspire <span> 3 A315-57G-336G (NX.HZREU.01S)</span> Charcoal Black </p>
-
-          <h5>laptops </h5>
-          <button class="btn"> Add To Cart</button>
+        </div>
+         <p> Ноутбук Acer Aspire <span> 3 A315-57G-336G (NX.HZREU.01S)</span> Charcoal Black </p>
+         <h5>laptops </h5>
+        <button class="btn">Add To Cart</button>
       </div>
 
   </div>
