--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
-</head>
-<body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>HTML/CSS Card component</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <section class="wrapper">
+        <div class="photo_wrapper"></div>
+        <div class="product_wrapper">
+          <div class="description_wrapper">
+            <div class="product_rating">
+              <span class="star">1.23</span>
+              <img src="./img/star.png" alt="star" />
+            </div>
+            <div class="product_price">15999</div>
+          </div>
+          <h5 class="product_title">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </h5>
+          <p class="product_kind">laptops</p>
+        </div>
+        <button class="button" type="button">add to card</button>
+      </section>
+    </main>
+  </body>
 </html>
