--- a/components/card/index.html
+++ b/components/card/index.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>HTML/CSS Card component</title>
-  <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
-</main>
+
+    <div class="conteiner">
+
+        <div class="card">
+
+            <div class="card_photo">
+                <img src="./img/laptop.jpg" alt="Acer Aspire 3">
+            </div>
+
+            <div class="card_exposition">
+
+                <div class="card_item">
+
+                    <div class="card_mark">
+
+                        <div class="mark_number">
+                            <span>1.23</span>
+                        </div>
+
+                        <div class="star">
+                            <img src="./img/star.png" alt="star">
+                        </div>
+                    </div>
+
+                    <div class="laptop_price">
+                        15999
+                    </div>
+                </div>
+
+                <div class="laptop_model">
+                    Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+                </div>
+
+                <div class="laptop_category">
+                    laptops
+                </div>
+            </div>
+
+            <div class="card_buttom">
+                <div class="buttom_text">
+                    Add To Cart
+                </div>
+            </div>
+        </div>
+
 </body>
+
 </html>
