--- a/components/card/index.html
+++ b/components/card/index.html
@@ -14,7 +14,7 @@
           <img src="./img/card-laptop1.png" alt="Laptop">
         </div>
         <div class="cart-rating-price-container">
-          <div class="card-rating">
+          <div class="cart-rating">
             <div class="card-rating-numeric">1.23</div>
             <div><img src="./img/Star 1.png" alt="stars"></div>
           </div>
