--- a/model.css
+++ b/model.css
@@ -61,6 +61,9 @@ padding: 8px 12px;
 text-transform: uppercase;
 transition: .3s;
 }
+.addbutton:hover {
+  background: #84f48f;
+}
 .summary {
   margin-bottom: 8px;
   font-size: 1rem;
