--- a/components/card/index.html
+++ b/components/card/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
 
   <style>
     .wrapper {
@@ -16,6 +18,22 @@
 <main>
   <div class="wrapper">
     <!-- Card component -->
+    <div class="card">
+      <img class="goods_photo" src="./Rectangle.png" alt="">
+
+      <div class="button_price">
+        <div class="rating_stars">
+          <span class="rating">1.23</span>
+          <img class="stars" src="./Star1.png" alt="">
+        </div>
+        <div class="price">15999</div>
+      </div>
+
+      <div class="goods_name">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</div>
+      <div class="goods_type">laptops</div>
+
+      <button class="add_to_card">add to card</button>
+    </div>
   </div>
 </main>
 </body>
