add card component

--- a/components/card/index.html
+++ b/components/card/index.html
@@ -5,17 +5,25 @@
   <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
     <!-- Card component -->
+    <div class="card-component">
+      <div class="main-img-container">
+        <img src="../../images/notebook.png" alt="notebook-icon">
+      </div>
+      <div class="container-row">
+      <button class="rate">
+        1.23<img src="../../images/Star%201.png" alt="star-icon">
+      </button>
+      <p class="price">15999</p>
+      </div>
+      <p class="notebook-info">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</p>
+      <p class="comment">laptops</p>
+      <button class="button-add">ADD TO CART</button>
+    </div>
   </div>
 </main>
 </body>
